samples/_failures_safe/1761392615_3d0373_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71671ec2.c: In function ‘main’:
./samples/SAFE/__tmp_71671ec2.c:148:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  148 |     int distances
      |     ^~~
./samples/SAFE/__tmp_71671ec2.c:148:5: error: expected declaration or statement at end of input
